--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.488.0",
     "motion": "^12.7.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
