--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.75.1",
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
@@ -37,6 +39,7 @@
     "react-hook-form": "^7.56.1",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.5.1",
+    "sonner": "^2.0.3",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
@@ -59,6 +62,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "vite-plugin-mkcert": "^1.17.8"
   }
 }
