--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.3",
     "lucide-react": "^0.488.0",
-    "motion": "^12.7.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
